# tabpfn-football-predictions

./: .gitignore  ARCHITECTURE.md  BACKTESTING.md  README.md  SECURITY.md  backtest.py  blend.py  data.py  datasets.py  evaluate.py  features.py  models.py  odds.py  predict.py  pyproject.toml  requirements.txt  results.csv  round_of_32_fixtures.csv  round_of_32_predictions.csv  tracking.py
.github/workflows/: ci.yml
artifacts/round_of_32/: METHODOLOGY.md  blend_sweep.csv  holdout_scores.csv  market_baseline.csv  submission_blend.csv  submission_blend_w015.csv  submission_tabpfn_odds.csv
football_lab/: __init__.py  __main__.py  catalog.py  cli.py  data.py  datasets.py  experiments.py  features.py  models.py  provenance.py  results.py
tests/: test_backtesting.py  test_basic.py  test_core.py  test_prediction_fixtures.py
