[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "football-lab"
version = "1.0.0"
description = "Versioned football datasets and reproducible model experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.5.0",
    "pandas==2.3.3",
    "scikit-learn==1.9.0",
    "tabpfn-client==0.3.2",
]

[project.optional-dependencies]
dev = [
    "bandit==1.9.4",
    "detect-secrets==1.5.0",
    "pip-audit==2.10.1",
    "ruff==0.15.20",
]

[project.scripts]
football-lab = "football_lab.cli:main"

[tool.setuptools.packages.find]
include = ["football_lab*"]

[tool.ruff]
target-version = "py312"
line-length = 100
